definindo elemntos básicos do html

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -63,7 +63,7 @@
         <div id="team">
             <a href="/about/allan-kardec"><div class="profile">
                 <img src="/img/img_avatar/allan.jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
+                <h3 class="font-weight-bold mt-4 mb-3">Allan<br>Kardec</h3>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
@@ -71,7 +71,7 @@
 
             <a href="/about/eric-binsfeld"><div class="profile">
                 <img src="/img/img_avatar/eric.jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Eric Binsfeld</h3>
+                <h3 class="font-weight-bold mt-4 mb-3">Eric<br>Binsfeld</h3>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
@@ -79,7 +79,7 @@
 
             <a href="/about/kevson-filipe"><div class="profile">
                 <img src="/img/img_avatar/kevson.png" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Kevson Santos</h3>
+                <h3 class="font-weight-bold mt-4 mb-3">Kevson<br>Santos</h3>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
@@ -87,7 +87,7 @@
 
             <a href="/about/pablo-miranda"><div class="profile">
                 <img src="/img/img_avatar/pablo.png" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Pablo Miranda</h3>
+                <h3 class="font-weight-bold mt-4 mb-3">Pablo<br>Miranda</h3>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
@@ -95,7 +95,7 @@
 
             <a href="/about/wanghley-martins"><div class="profile">
                 <img src="/img/img_avatar/wanghley.jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Wanghley Martins</h3>
+                <h3 class="font-weight-bold mt-4 mb-3">Wanghley<br>Martins</h3>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
