--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -1,1 +1,11 @@
-allan
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nome Avatar</title>
+</head>
+<body>
+    
+</body>
+</html>
