UPDATE - Atualizando Links

--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -30,7 +30,9 @@
     <link rel="stylesheet " href="/about/about.css" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap-social.css">
-
+    
+    <!--icone do site-->
+    <link rel="icon" href="../img/icon.png">
 </head>
 <body>
     
