--- a/static/about/index.html
+++ b/static/about/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet " href="/about/about.css" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap-social.css">
-    
+
     <!--icone do site-->
     <link rel="icon" href="/img/icon.png">
 </head>
@@ -45,7 +45,7 @@
             <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237);"><img id='slogan' src="/img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="../about/">SOBRE</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="/about/">SOBRE</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">BLOG</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">SERVIÇOS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">CONTATO</a></li>
@@ -61,45 +61,55 @@
         </div>
         <hr>
         <div id="team">
-            <a href="/about/allan-kardec"><div class="profile">
-                <img src="/img/img_avatar/allan.jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Allan<br>Kardec</h3>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
-            </div></a>
+            <a href="/about/allan-kardec">
+                <div class="profile">
+                    <img src="/img/img_avatar/allan.jpg" class="rounded-circle" alt="avatar">
+                    <h3 class="font-weight-bold mt-4 mb-3">Allan<br>Kardec</h3>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                </div>
+            </a>
 
-            <a href="/about/eric-binsfeld"><div class="profile">
-                <img src="/img/img_avatar/eric.jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Eric<br>Binsfeld</h3>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
-            </div></a>
+            <a href="/about/eric-binsfeld">
+                <div class="profile">
+                    <img src="/img/img_avatar/eric.jpg" class="rounded-circle" alt="avatar">
+                    <h3 class="font-weight-bold mt-4 mb-3">Eric<br>Binsfeld</h3>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                </div>
+            </a>
 
-            <a href="/about/kevson-filipe"><div class="profile">
-                <img src="/img/img_avatar/kevson.png" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Kevson<br>Santos</h3>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
-            </div></a>
+            <a href="/about/kevson-filipe">
+                <div class="profile">
+                    <img src="/img/img_avatar/kevson.png" class="rounded-circle" alt="avatar">
+                    <h3 class="font-weight-bold mt-4 mb-3">Kevson<br>Santos</h3>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                </div>
+            </a>
 
-            <a href="/about/pablo-miranda"><div class="profile">
-                <img src="/img/img_avatar/pablo.png" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Pablo<br>Miranda</h3>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
-            </div></a>
+            <a href="/about/pablo-miranda">
+                <div class="profile">
+                    <img src="/img/img_avatar/pablo.png" class="rounded-circle" alt="avatar">
+                    <h3 class="font-weight-bold mt-4 mb-3">Pablo<br>Miranda</h3>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                </div>
+            </a>
 
-            <a href="/about/wanghley-martins"><div class="profile">
-                <img src="/img/img_avatar/wanghley.jpg" class="rounded-circle" alt="avatar">
-                <h3 class="font-weight-bold mt-4 mb-3">Wanghley<br>Martins</h3>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
-            </div></a>
+            <a href="/about/wanghley-martins">
+                <div class="profile">
+                    <img src="/img/img_avatar/wanghley.jpg" class="rounded-circle" alt="avatar">
+                    <h3 class="font-weight-bold mt-4 mb-3">Wanghley<br>Martins</h3>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                </div>
+            </a>
         </div>
     </section>
     <!-- Section: Team v.1 -->
