UPDATE - Posicionando Background e barra-top do menu em nos arquivos kevsonfilipe.html, pablomiranda.html, wanghleymasrtins.html

--- a/static/about/pablomiranda.html
+++ b/static/about/pablomiranda.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161188176-1"></script>
+      <script>
+          window.dataLayer = window.dataLayer || [];
+  
+          function gtag() {
+              dataLayer.push(arguments);
+          }
+          gtag('js', new Date());
+  
+          gtag('config', 'UA-161188176-1');
+      </script>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Nome Avatar</title>
+      <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+      <!--nuvem-->
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
+      <!--nuvem-->
+      <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic ">
+      <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic ">
+      <link href="/fonts/font-awesome.min.css ">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+      <script href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+      <script href="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+      <link rel="stylesheet " href="/about/about.css" media="all">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="/bootstrap/css/bootstrap-social.css">
+      <link rel="stylesheet" href="CSS/about.css">
+      <!--icone do site-->
+      <link rel="icon" href="../img/icon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nome Avatar</title>
 </head>
-<body>
-    
+<body id="page-top">
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.9); height: 6rem;" onmouseover="c3()">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237);"><img id='slogan' src="/img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="/about/">SOBRE</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">BLOG</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">SERVIÇOS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">CONTATO</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="team-section text-center w-100 h-100">
+        <div class="text-center ">
+            <h2 class="founders-title">Nome de Avatar</h2>
+        </div>
+        <hr>
+    </section>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/js/bs-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="/js/creative.js"></script> 
 </body>
 </html>
