[UPDATE] name added

--- a/static/about/ericbinsfeld.html
+++ b/static/about/ericbinsfeld.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome Avata</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161188176-1"></script>
     <script>
@@ -19,7 +18,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome Avatar</title>
+    <title>Sobre: Eric Binsfeld</title>
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
     <!--nuvem-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
@@ -56,9 +55,10 @@
 
     <section class="team-section text-center w-100 h-100">
         <div class="text-center ">
-            <h2 class="founders-title">Nome de avatar</h2>
+            <h2 class="founders-title">Eric Binsfeld</h2>
         </div>
         <hr>
+        <div id="white-div">test<br>this is a white div</div>
     </section>
 </body>
 
