[UPDATE] Social media

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -65,9 +65,9 @@
                 <div class="profile">
                     <img src="/img/img_avatar/allan.jpg" class="rounded-circle" alt="avatar">
                     <h3 class="font-weight-bold mt-4 mb-3">Allan<br>Kardec</h3>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/kardecallan56/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </a>
 
@@ -75,9 +75,9 @@
                 <div class="profile">
                     <img src="/img/img_avatar/eric.jpg" class="rounded-circle" alt="avatar">
                     <h3 class="font-weight-bold mt-4 mb-3">Eric<br>Binsfeld</h3>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/ericlbins/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a target="_blank" href="www.linkedin.com/in/eric-binsfeld/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://github.com/EricLoBin" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </a>
 
@@ -85,9 +85,9 @@
                 <div class="profile">
                     <img src="/img/img_avatar/kevson.png" class="rounded-circle" alt="avatar">
                     <h3 class="font-weight-bold mt-4 mb-3">Kevson<br>Santos</h3>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/kevsonfilipe/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://github.com/KevsonDoc" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </a>
 
@@ -95,9 +95,9 @@
                 <div class="profile">
                     <img src="/img/img_avatar/pablo.png" class="rounded-circle" alt="avatar">
                     <h3 class="font-weight-bold mt-4 mb-3">Pablo<br>Miranda</h3>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/_pablo_mir16/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://github.com/pablomir16" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </a>
 
@@ -105,9 +105,9 @@
                 <div class="profile">
                     <img src="/img/img_avatar/wanghley.jpg" class="rounded-circle" alt="avatar">
                     <h3 class="font-weight-bold mt-4 mb-3">Wanghley<br>Martins</h3>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                    <a href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/wanghley/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/wanghley/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://github.com/Wanghley" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </a>
         </div>
