[UPDATE] user page

--- a/static/about/ericbinsfeld.html
+++ b/static/about/ericbinsfeld.html
@@ -58,7 +58,10 @@
             <h2 class="founders-title">Eric Binsfeld</h2>
         </div>
         <hr>
-        <div id="white-div">test<br>this is a white div</div>
+        <div id="white-div">
+            <h1>Main title</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti maxime fugit a nobis deleniti magni, amet non perferendis atque dolorum eveniet provident mollitia vel, quam ipsum alias. Dolore, voluptas tempore?</p>
+        </div>
     </section>
 </body>
 
