Adicionando elementos para imagem e textos para página de cada um no anout

--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -56,6 +56,11 @@
             <h2 class="founders-title">Nome de avatar</h2>
         </div>
         <hr>
+        <div class="profile">
+            <img class="rounded" src="/img/img_avatar/#" alt="Allan-avatar">
+            <img class="rounded" src="/img/img_avatar/#" alt="Allan">
+        </div>
+        <div id="white-div">test<br>this is a white div</div>
     </section>
 
 
