--- a/static/about/ericbinsfeld.html
+++ b/static/about/ericbinsfeld.html
@@ -57,9 +57,19 @@
         <div class="text-center ">
             <h2 class="founders-title">Eric Binsfeld</h2>
         </div>
-        <hr>
+        <div class="profile">
+            <img class="rounded" src="/img/img_avatar/#" alt="eric-avatar">
+            <img class="rounded" src="/img/img_avatar/#" alt="eric">
+        </div>
         <div id="white-div">test<br>this is a white div</div>
     </section>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/js/bs-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="/js/creative.js"></script>
 </body>
 
 </html>
