--- a/static/about/index.html
+++ b/static/about/index.html
@@ -83,7 +83,7 @@
 
             <a href="/about/kevson-filipe">
                 <div class="profile">
-                    <img src="/img/img_avatar/kevson.png" class="rounded-circle" alt="avatar">
+                    <img src="/img/img_avatar/kevson-about.png" class="rounded-circle" alt="avatar">
                     <h3 class="font-weight-bold mt-4 mb-3">Kevson<br>Santos</h3>
                     <a target="_blank" href="https://www.instagram.com/kevsonfilipe/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                     <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
