--- a/static/about/wanghleymartins.html
+++ b/static/about/wanghleymartins.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,6 +38,7 @@
     <link rel="icon" href="../img/icon.png">
     <title>Wanghley</title>
 </head>
+
 <body id="page-top">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.9); height: 6rem;" onmouseover="c3()">
         <div class="container">
@@ -57,6 +59,11 @@
             <h2 class="founders-title">Nome de Avatar</h2>
         </div>
         <hr>
+        <div class="profile">
+            <img class="rounded" src="/img/img_avatar/#" alt="wanghley avatar">
+            <img class="rounded" src="/img/img_avatar/#" alt="wanghley">
+        </div>
+        <div id="white-div">test<br>this is a white div</div>
     </section>
     <script src="/js/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
@@ -64,6 +71,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-    <script src="/js/creative.js"></script> 
+    <script src="/js/creative.js"></script>
 </body>
+
 </html>
