[UPDATE] profile page

--- a/static/about/kevsonfilipe.html
+++ b/static/about/kevsonfilipe.html
@@ -62,11 +62,16 @@
                 <h2 class="founders-title">O Doutor</h2>
             </div>
             <hr>
-            <div class="profile">
-                <img class="rounded" src="/img/img_avatar/kevson-avatar.jpg" alt="kevson-avatar">
-                <img class="rounded" src="/img/img_avatar/kevson.jpg" alt="kevson">
+            <div id="white-div" class="row">
+                <div id="texto">
+                    test<br>this is a white div
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt distinctio quidem reiciendis ullam.
+                </div>
+                <div class="profile">
+                <img class="rounded" id="show" src="/img/img_avatar/kevson-avatar.jpg" alt="kevson-avatar">
+                <img class="rounded" id="hide" src="/img/img_avatar/kevson.jpg" alt="kevson">
+                </div>
             </div>
-            <div id="white-div">test<br>this is a white div</div>
         </section>
         <script src="/js/jquery.min.js"></script>
         <script src="/bootstrap/js/bootstrap.min.js"></script>
