--- a/static/about/kevsonfilipe.html
+++ b/static/about/kevsonfilipe.html
@@ -68,8 +68,9 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt distinctio quidem reiciendis ullam.
                 </div>
                 <div class="profile">
-                    <img class="rounded" id="show" src="/img/img_avatar/kevson-avatar.jpg" alt="kevson-avatar">
+                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/kevson-avatar.jpg" alt="kevson-avatar"></div>
                     <img class="rounded" id="hide" src="/img/img_avatar/kevson.jpg" alt="kevson">
+                    
                 </div>
             </div>
         </section>
