[UPDATE] fixing bugs and responsive problems

--- a/static/about/wanghleymartins.html
+++ b/static/about/wanghleymartins.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="CSS/about.css">
     <!--icone do site-->
     <link rel="icon" href="../img/icon.png">
-    <title>O Wanghley</title>
+    <title>O Doutor</title>
 </head>
 
 <body id="page-top">
@@ -58,18 +58,22 @@
 
         <section class="team-section text-center w-100 h-100">
             <div class="text-center ">
-                <h2 class="founders-title">O Wanghley</h2>
+                <h2 class="founders-title">Mr Gandalf</h2>
             </div>
             <hr>
             <div id="white-div" class="row">
+                <div class="profile">
+                    <div style="height: 0px; width: 100%;">
+                        <img class="rounded wanghley" id="show" src="/img/img_avatar/gandalf.gif" alt="wanghley-avatar">
+                        <img class="rounded wanghley" id="show" src="/img/img_avatar/gandalf.gif" alt="wanghley-avatar">
+                    </div>
+                    <img class="rounded wanghley-original" id="hide" src="/img/img_avatar/wanghley.jpg" alt="wanghley"
+                    style="width: 100%;">
+                    
+                </div>
                 <div id="texto">
                     test<br>this is a white div
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt distinctio quidem reiciendis ullam.
-                </div>
-                <div class="profile">
-                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/kevson-avatar.jpg" alt="kevson-avatar"></div>
-                    <img class="rounded" id="hide" src="/img/img_avatar/kevson.jpg" alt="kevson">
-                    
                 </div>
             </div>
         </section>
