--- a/static/about/wanghleymartins.html
+++ b/static/about/wanghleymartins.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="CSS/about.css">
     <!--icone do site-->
     <link rel="icon" href="../img/icon.png">
-    <title>O Doutor</title>
+    <title>Mr Gandalf</title>
 </head>
 
 <body id="page-top">
@@ -72,8 +72,10 @@
                     
                 </div>
                 <div id="texto">
-                    test<br>this is a white div
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt distinctio quidem reiciendis ullam.
+                    <p>
+                        test<br>this is a white div
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt distinctio quidem reiciendis ullam.
+                    </p>
                 </div>
             </div>
         </section>
