--- a/static/about/index.html
+++ b/static/about/index.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="/about/">SOBRE</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">BLOG</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="http://blog.undergrounds.rf.gd/">BLOG</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">SERVIÇOS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">CONTATO</a></li>
                 </ul>
