--- a/static/index.html
+++ b/static/index.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="about/">SOBRE</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="blog/">BLOG</a>
+                        <a class="nav-link" href="http://blog.undergrounds.rf.gd/">BLOG</a>
                     </li>
                     <li class="nav-item" role="presentation">
                         <a class="nav-link" href="#portfolio">SERVIÇOS</a>
