--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -63,13 +63,13 @@
             <hr>
             <div id="white-div" class="row">
                 <div class="profile">
-                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/kevson-avatar.jpg" alt="kevson-avatar"></div>
-                    <img class="rounded" id="hide" src="/img/img_avatar/kevson.jpg" alt="kevson">
+                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/allan.jpg" alt="kevson-avatar"></div>
+                    <img class="rounded" id="hide" src="/img/img_avatar/allan.jpg" alt="allan">
                 </div>
                 <div id="texto">
                     <p>
-                        test<br>this is a white div
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt distinctio quidem reiciendis ullam.
+                        O VAGABUNDO<br>Esse malditinho dorme o dia todo.
+                        Ele gosta muito de não fazer nada, mais faz algo.
                     </p>
                 </div>
             </div>
