--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -64,7 +64,7 @@
             <div id="white-div" class="row">
                 <div class="profile">
                     <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/allan.jpg" alt="kevson-avatar"></div>
-                    <img class="rounded" id="hide" src="/img/img_avatar/allan.jpg" alt="allan">
+                    <img class="rounded" id="hide" src="/img/img_avatar/asdsdsdsdsdsdsdsd.jpg" alt="allan">
                 </div>
                 <div id="texto">
                     <p>
