--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -63,8 +63,8 @@
             <hr>
             <div id="white-div" class="row">
                 <div class="profile">
-                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/allan.jpg" alt="kevson-avatar"></div>
-                    <img class="rounded" id="hide" src="/img/img_avatar/asdsdsdsdsdsdsdsd.jpg" alt="allan">
+                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/allan.jpg" alt="allan"></div>
+                    <img class="rounded" id="hide" src="/img/img_avatar/asdsdsdsdsdsdsdsd.jpg" alt="asdsdsdsdsdsdsdsd">
                 </div>
                 <div id="texto">
                     <p>
