--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -63,7 +63,7 @@
             <hr>
             <div id="white-div" class="row">
                 <div class="profile">
-                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/asdsdsdsdsdsdsdsd.jpg" alt="asdsdsdsdsdsdsdsd"></div>
+                    <div style="height: 100%; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/asdsdsdsdsdsdsdsd.jpg" alt="asdsdsdsdsdsdsdsd"></div>
                     <img class="rounded" id="hide" src="/img/img_avatar/allan.jpg" alt="allan">
                 </div>
                 <div id="texto">
