[UPDATE] informations in wanghleymartins.html

--- a/static/about/wanghleymartins.html
+++ b/static/about/wanghleymartins.html
@@ -68,14 +68,24 @@
                         <img class="rounded wanghley" id="show" src="/img/img_avatar/gandalf.gif" alt="wanghley-avatar">
                     </div>
                     <img class="rounded wanghley-original" id="hide" src="/img/img_avatar/wanghley.jpg" alt="wanghley"
-                    style="width: 100%;">
+                    style="width: 100%;height: 18rem;">
                     
                 </div>
                 <div id="texto">
                     <p>
-                        test<br>this is a white div
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt distinctio quidem reiciendis ullam.
+                        Mr Gandalf, tendo o nome científico como Wanghley Martins, é um rato da computação... estuda programação, inteligência artificial e afins desde os nove anos. Um cara que ama desafiar a si mesmo e criar aquilo que parecia impossível. Fazer ciência é um dos seus lemas.
                     </p>
+                    <p>
+                        Wanghley acredita fielmente que <u>você pode encontrar as coisas que perdeu, mas nunca as que abandonou</u>. A sua maior motivação é fazer diferença na sociedade de alguma forma. E aqui entra, pra ele, a Underground DEVs pois <u>tudo o que temos de decidir é o que fazer com o tempo que nos é dado</u>.
+                    </p>
+                    <p>
+                        Atualmente as principais especialidades de <b>Mr Gandalf</b> são liderança, gerenciamento de riscos corporativos, gestão de equipes e pessoas, programação (às vezes orientada a gambiarra huahuahua - mentira, qualidade é tudo pessoas) desktop, programação web fullstack, ciência de dados, visualização de dados, aplicação de sistemas especialistas em cenários aeroespaciais, inteligência articial e computação em nuvem... Mas, é claro, sempre tentando melhorar e aprender mais a cada dia.
+                    </p>
+                </div>
+                <div class="text-center" style="float: left;text-align: center;">
+                    <a target="_blank" href="https://www.instagram.com/wanghley/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/wanghley/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://github.com/Wanghley" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </div>
         </section>
