[UPDATE] center networks & photos

--- a/static/about/wanghleymartins.html
+++ b/static/about/wanghleymartins.html
@@ -65,7 +65,7 @@
                         <img class="rounded wanghley" id="show" src="/img/img_avatar/gandalf.gif" alt="wanghley-avatar">
                     </div>
                     <img class="rounded wanghley-original" id="hide" src="/img/img_avatar/wanghley.jpg" alt="wanghley"
-                    style="width: 100%;height: 18rem;">
+                    style="width: 100%;height: 16.5rem;">
                     
                 </div>
                 <div id="texto">
@@ -79,7 +79,7 @@
                         Atualmente as principais especialidades de <b>Mr Gandalf</b> são liderança, gerenciamento de riscos corporativos, gestão de equipes e pessoas, programação (às vezes orientada a gambiarra huahuahua - mentira, qualidade é tudo pessoas) desktop, programação web fullstack, ciência de dados, visualização de dados, aplicação de sistemas especialistas em cenários aeroespaciais, inteligência articial e computação em nuvem... Mas, é claro, sempre tentando melhorar e aprender mais a cada dia.
                     </p>
                 </div>
-                <div class="text-center" style="float: left;text-align: center;">
+                <div class="text-center redes-sociais-wanghley" style="float: left;text-align: center;">
                     <a target="_blank" href="https://www.instagram.com/wanghley/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
                     <a target="_blank" href="https://www.linkedin.com/in/wanghley/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                     <a target="_blank" href="https://github.com/Wanghley" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
