--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -65,7 +65,7 @@
                 </div>
                 <div id="texto">
                     <p>
-                        O VAGABUNDO<br>Esse malditinho dorme o dia todo.
+                        O MALUKO<br>Esse malditinho dorme o dia todo.
                         Ele gosta muito de não fazer nada, mais faz algo.
                     </p>
                 </div>
