[UPDATE] Social media

--- a/static/about/ericbinsfeld.html
+++ b/static/about/ericbinsfeld.html
@@ -70,9 +70,9 @@
                     </p>
                 </div>
                 <div class="text-center redes-sociais-profiles">
-                    <a target="_blank" href="https://www.instagram.com/wanghley/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a target="_blank" href="https://www.linkedin.com/in/wanghley/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                    <a target="_blank" href="https://github.com/Wanghley" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/ericlbins/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a target="_blank" href="www.linkedin.com/in/eric-binsfeld/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://github.com/EricLoBin" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </div>
         </section>
