--- a/static/about/kevsonfilipe.html
+++ b/static/about/kevsonfilipe.html
@@ -65,7 +65,7 @@
                 </div>
                 <div id="texto">
                     <p>
-                        test<br>this is a white div Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt
+                        test<br> O doutor =================================this is a white div Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt
                         distinctio quidem reiciendis ullam.
                     </p>
                 </div>
