[UPDATE] Social medias profile

--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -69,6 +69,11 @@
                         Ele gosta muito de não fazer nada, mais faz algo.
                     </p>
                 </div>
+                <div class="text-center redes-sociais-profiles">
+                    <a target="_blank" href="https://www.instagram.com/kardecallan56/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                </div>
             </div>
         </section>
         <script src="/js/jquery.min.js"></script>
