[UPDATE] Social media

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -76,7 +76,7 @@
                     <img src="/img/img_avatar/eric.jpg" class="rounded-circle" alt="avatar">
                     <h3 class="font-weight-bold mt-4 mb-3">Eric<br>Binsfeld</h3>
                     <a target="_blank" href="https://www.instagram.com/ericlbins/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a target="_blank" href="www.linkedin.com/in/eric-binsfeld/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/eric-binsfeld/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                     <a target="_blank" href="https://github.com/EricLoBin" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </a>
