--- a/static/about/pablomiranda.html
+++ b/static/about/pablomiranda.html
@@ -60,8 +60,8 @@
             <hr>
             <div id="white-div" class="row">
                 <div class="profile">
-                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/kevson-avatar.jpg" alt="kevson-avatar"></div>
-                    <img class="rounded" id="hide" src="/img/img_avatar/kevson.jpg" alt="kevson">
+                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/jake.jpg" alt="kevson-avatar"></div>
+                    <img class="rounded" id="hide" src="/img/img_avatar/pablo.jpg" alt="kevson">
                 </div>
                 <div id="texto">
                     <p>
