[ADD] - Corrigindo bug de background da pasta about e colocando fotos de avatar

--- a/static/about/pablomiranda.html
+++ b/static/about/pablomiranda.html
@@ -36,7 +36,6 @@
 </head>
 
 <body id="page-top">
-
     <body id="page-top">
         <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.9); height: 6rem;" onmouseover="c3()">
             <div class="container">
@@ -55,7 +54,7 @@
 
         <section class="team-section text-center w-100 h-100">
             <div class="text-center ">
-                <h2 class="founders-title">O Pablo</h2>
+                <h2 class="founders-title">Detetive Jake</h2>
             </div>
             <hr>
             <div id="white-div" class="row">
