--- a/static/about/ericbinsfeld.html
+++ b/static/about/ericbinsfeld.html
@@ -55,13 +55,13 @@
 
         <section class="team-section text-center w-100 h-100">
             <div class="text-center ">
-                <h2 class="founders-title">O Eric</h2>
+                <h2 class="founders-title">Glados</h2>
             </div>
             <hr>
             <div id="white-div" class="row">
                 <div class="profile">
-                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/kevson-avatar.jpg" alt="kevson-avatar"></div>
-                    <img class="rounded" id="hide" src="/img/img_avatar/kevson.jpg" alt="kevson">
+                    <div style="height: 0px; width: 100%;"><img class="rounded" id="show" src="/img/img_avatar/glados.jpg" alt="kevson-avatar"></div>
+                    <img class="rounded" id="hide" src="/img/img_avatar/eric.jpg" alt="kevson">
                 </div>
                 <div id="texto">
                     <p>
