--- a/static/about/ericbinsfeld.html
+++ b/static/about/ericbinsfeld.html
@@ -65,8 +65,7 @@
                 </div>
                 <div id="texto">
                     <p>
-                        test<br>this is a white div
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt distinctio quidem reiciendis ullam.
+                        GLaDOS, com a personalidade de Eric, é um estudante de informática que acredita que os testes e experimentação são extremamente importantes para a ciência.
                     </p>
                 </div>
                 <div class="text-center redes-sociais-profiles">
